--- a/style.css
+++ b/style.css
@@ -273,3 +273,38 @@
     top: 1443px;
     background: #020E35;
   }
+
+  .card4 {
+    position: absolute;
+    display: flex;
+    width: 1000px;
+    height: 390px;
+    left: 135px;
+    top: 1400px;
+    
+  }
+  
+  .textc4 {
+    position: relative;
+    left: 150px;
+    top: 0px;
+    color: azure;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .backgroud_c4 {
+    position: relative;
+    width: 2210px;
+    height: 390px;
+    left: 170px;
+    top: 0px;
+    background: #32D6F0;
+  }
+  
+  .gambarc4 {
+    position: relative;
+    width: 476px;
+    height: 229px;
+    left: 0px;
+    top: 77px;
+  }
