--- a/style.css
+++ b/style.css
@@ -119,6 +119,14 @@
     
     background: #FDF8E3;    
 }
+.bawah{
+  position: absolute;
+  width: 584px;
+  height: 38px;
+  left: 135px;
+  top: 3941px;  
+}
+
 .ot2{
     position: absolute;
     width: 377px;
